--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
     <meta charset="UTF-8">
     <!-- Permet d'indiquer comment le navigateur doit afficher la page sur différents appareils -->
-    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit="no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JARDITOU</title>
 
     <!-- CSS Files Links -->
@@ -17,45 +15,60 @@
 <body>
 
   <header>
-
+ 
     <img class="entete_g" src="assets/img/jarditou_logo.png" alt="logo_g">
-    <h1><p class="slogan">Tout le jardin</p></h1>
+    <h1 class="slogan">Tout le jardin</h1>
     <img class="entete_d" src="assets/img/jarditou_logo_dr.png" alt="logo_d">
 
- </header>
+  </header>
   
- <nav> <!-- Menu de Navigation -->
-  <ul class="nav">
-     <a href="index.html">Accueil</a>
-     <a href="tableau.html">Tableau</a>
-     <a href="contact.html">Contacts</a>
-  </ul>
-</nav>
+  <nav class="nav"> <!-- Menu de Navigation -->   
+      <a href="index.html">Accueil</a>
+      <a href="tableau.html">Tableau</a>
+      <a href="contact.html">Contacts</a>
+  </nav>
    
-    <div class="banniere">
+  <div class="banniere">
       <img class="promo" src="assets/img/promotion.jpg" alt="promotion">  
       <img class="body_gif" src="assets/img/GIF.gif" alt="logo_gif">
-    </div>
-<main>   
-   <section>
+  </div>
+  
+<main> 
 
-    <h2 class="accueil">Accueil</h2><hr>
+ <br class="espace">
+
+ <section>
+
+  <h2 class="accueil">Accueil</h2><hr>
 
    <article>
+
     <h3>L'entreprise</h3><br>
+
     <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du paysagisme.</p><br>
+
     <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p><br>
+
     <p>Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert, Doullens, Péronne, Abbeville, Corbie</p><br>
-   </article> 
-   <article>
+
+  </article> 
+
+  <article>
+
     <h3>Qualité</h3><br>
+
     <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre projet.</p><br>
+
   </article>
+
   <article> 
+
     <h3>Devis gratuit</h3><br>
+
     <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p><br>
+
   </article>
-  </section>
+ </section>
 </main>
 
   <footer> 
