--- a/tableau.html
+++ b/tableau.html
@@ -5,55 +5,50 @@
     <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
     <meta charset="UTF-8">
     <!-- Permet d'indiquer comment le navigateur doit afficher la page sur différents appareils -->
-    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit="no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JARDITOU</title>
 
     <!-- CSS Files Links -->
-    <link rel="stylesheet" href="stylesheet/Jarditou.css">
+    <link rel="stylesheet" href="stylesheet/Jarditou.css">    
 </head>   
 
 <body>
+
   <header>
  
     <img class="entete_g" src="assets/img/jarditou_logo.png" alt="logo_g">
-    <h1><p class="slogan" >Tout le jardin</p></h1>
+    <h1 class="slogan">Tout le jardin</h1>
     <img class="entete_d" src="assets/img/jarditou_logo_dr.png" alt="logo_d">
 
   </header>
-
-      <nav> <!-- Menu de Navigation -->
-        <ul class="nav">
-            <a href="index.html">Accueil</a>
-            <a href="tableau.html">Tableau</a>
-            <a href="contact.html">Contacts</a>
-        </ul>
-        
-      </nav>
+  
+  <nav class="nav"> <!-- Menu de Navigation -->
+      <a href="index.html">Accueil</a>
+      <a href="tableau.html">Tableau</a>
+      <a href="contact.html">Contacts</a>
+  </nav>
    
-    <div class="banniere">
+  <div class="banniere">
       <img class="promo" src="assets/img/promotion.jpg" alt="promotion">  
       <img class="body_gif" src="assets/img/GIF.gif" alt="logo_gif">
-    </div>
+  </div>
 
 <main>
 
  <table>
 
     <tr>
-
-        <th class="entete_tab" scope="row">Photo</th>
-        <th class="entete_tab" scope="row">ID</th>
-        <th class="entete_tab" scope="row">Categories</th>
-        <th class="entete_tab" scope="row">Libellé</th>
-        <th class="entete_tab" scope="row">Prix</th>
-        <th class="entete_tab" scope="row">Couleur</th>
+      <th class="entete_tab">Photo</th>
+      <th class="entete_tab">ID</th>
+      <th class="entete_tab">Categories</th>
+      <th class="entete_tab">Libellé</th>
+      <th class="entete_tab">Prix</th>
+      <th class="entete_tab">Couleur</th>
     
     </tr>
 
     <tr>
-        <th> <img src="assets/img/7.png"  alt="barbecue"></th>
+        <th> <img src="assets/img/7.png" alt=""> </th>
         <td>7</td>
         <td>Barbecues</td>
         <td>Aramis</td>
