--- a/tableau.html
+++ b/tableau.html
@@ -9,7 +9,7 @@
     <title>JARDITOU</title>
 
     <!-- CSS Files Links -->
-    <link rel="stylesheet" href="stylesheet/Jarditou.css">    
+    <link href="stylesheet/Jarditou.css" rel="stylesheet">       
 </head>   
 
 <body>
