--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>JARDITOU</title>
 
     <!-- CSS Files Links -->
-    <link href="stylesheet/Jarditou.css" rel="stylesheet">    
+    <link href="css/Jarditou.css" rel="stylesheet">    
 </head>   
 
 <body>
