--- a/index.html
+++ b/index.html
@@ -1,86 +1,97 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="fr">
 <!-- Début de la balise head -->
-<head>
-    <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
-    <meta charset="UTF-8">
-    <!-- Permet d'indiquer comment le navigateur doit afficher la page sur différents appareils -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JARDITOU</title>
 
-    <!-- CSS Files Links -->
-    <link href="css/Jarditou.css" rel="stylesheet">    
-</head>   
+<head>
+  <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
+  <meta charset="UTF-8">
+  <!-- Permet d'indiquer comment le navigateur doit afficher la page sur différents appareils -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JARDITOU</title>
+
+  <!-- CSS Files Links -->
+  <link href="css/Jarditou.css" rel="stylesheet">
+</head>
 
 <body>
 
   <header>
- 
+
     <img class="entete_g" src="assets/img/jarditou_logo.png" alt="logo_g">
     <h1 class="slogan">Tout le jardin</h1>
     <img class="entete_d" src="assets/img/jarditou_logo_dr.png" alt="logo_d">
 
   </header>
-  
-  <nav class="nav"> <!-- Menu de Navigation -->   
-      <a href="index.html">Accueil</a>
-      <a href="tableau.html">Tableau</a>
-      <a href="contact.html">Contacts</a>
+
+  <nav> <!-- Menu de Navigation -->
+    <a href="index.html">Accueil</a>
+    <a href="tableau.html">Tableau</a>
+    <a href="contact.html">Contacts</a>
   </nav>
-   
+
   <div class="banniere">
-      <img class="promo" src="assets/img/promotion.jpg" alt="promotion">  
-      <img class="body_gif" src="assets/img/GIF.gif" alt="logo_gif">
+    <img class="promo" src="assets/img/promotion.jpg" alt="promotion">
+    <img class="body_gif" src="assets/img/GIF.gif" alt="logo_gif">
   </div>
-  
-<main> 
 
- <br class="espace">
+  <aside>
 
- <section>
+    <img class="outils" src="assets/img/outils.png" alt="outils">
 
-  <h2 class="accueil">Accueil</h2><hr>
+  </aside>
 
-   <article>
+  <main>
 
-    <h3>L'entreprise</h3><br>
+    <br class="espace">
 
-    <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du paysagisme.</p><br>
+    <section>
 
-    <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p><br>
+      <h2 class="accueil">Accueil</h2>
+      <hr>
 
-    <p>Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert, Doullens, Péronne, Abbeville, Corbie</p><br>
+      <article>
 
-  </article> 
+        <h3>L'entreprise</h3><br>
 
-  <article>
+        <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du
+          paysagisme.</p><br>
 
-    <h3>Qualité</h3><br>
+        <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p><br>
 
-    <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre projet.</p><br>
+        <p>Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert, Doullens, Péronne,
+          Abbeville, Corbie</p><br>
 
-  </article>
+      </article>
 
-  <article> 
+      <article>
 
-    <h3>Devis gratuit</h3><br>
+        <h3>Qualité</h3><br>
 
-    <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p><br>
+        <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre projet.
+        </p><br>
 
-  </article>
- </section>
-</main>
+      </article>
 
-  <footer> 
+      <article>
+
+        <h3>Devis gratuit</h3><br>
+
+        <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous
+          souhaitez un devis ? Nous vous le réalisons gratuitement.</p><br>
+
+      </article>
+    </section>
+  </main>
+
+  <footer>
 
     <nav> <!-- Menu de Navigation -->
-      <ul class="nav">
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="#" >Horaires</a></li>
-          <li><a href="#">Plan du site</a></li>
-      </ul>
+      <a href="index.html">Mentions légales</a>
+      <a href="tableau.html">Horaires</a>
+      <a href="index.html">Plan du site</a>
     </nav>
-    
+
   </footer>
-</body>   
+</body>
+
 </html>
