--- a/tableau.html
+++ b/tableau.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="fr">
 <!-- Début de la balise head -->
+
 <head>
     <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
     <meta charset="UTF-8">
@@ -9,104 +10,103 @@
     <title>JARDITOU</title>
 
     <!-- CSS Files Links -->
-    <link href="css/Jarditou.css" rel="stylesheet">       
-</head>   
+    <link href="css/Jarditou.css" rel="stylesheet">
+</head>
 
 <body>
 
-  <header>
- 
-    <img class="entete_g" src="assets/img/jarditou_logo.png" alt="logo_g">
-    <h1 class="slogan">Tout le jardin</h1>
-    <img class="entete_d" src="assets/img/jarditou_logo_dr.png" alt="logo_d">
+    <header>
 
-  </header>
-  
-  <nav class="nav"> <!-- Menu de Navigation -->
-      <a href="index.html">Accueil</a>
-      <a href="tableau.html">Tableau</a>
-      <a href="contact.html">Contacts</a>
-  </nav>
-   
-  <div class="banniere">
-      <img class="promo" src="assets/img/promotion.jpg" alt="promotion">  
-      <img class="body_gif" src="assets/img/GIF.gif" alt="logo_gif">
-  </div>
+        <img class="entete_g" src="assets/img/jarditou_logo.png" alt="logo_g">
+        <h1 class="slogan">Tout le jardin</h1>
+        <img class="entete_d" src="assets/img/jarditou_logo_dr.png" alt="logo_d">
 
-<main>
+    </header>
 
- <table>
-
-    <tr>
-      <th class="entete_tab">Photo</th>
-      <th class="entete_tab">ID</th>
-      <th class="entete_tab">Categories</th>
-      <th class="entete_tab">Libellé</th>
-      <th class="entete_tab">Prix</th>
-      <th class="entete_tab">Couleur</th>
-    
-    </tr>
-
-    <tr>
-        <th> <img src="assets/img/7.png" alt=""> </th>
-        <td>7</td>
-        <td>Barbecues</td>
-        <td>Aramis</td>
-        <td>110.00€</td>
-        <td>Brun</td>
-    </tr>
-
-    <tr> 
-        <th> <img src="assets/img/8.png" alt="barbecues"></th>
-        <td>8</td>
-        <td>Barbecues</td>
-        <td>Athos</td>
-        <td>249.00€</td>    
-        <td>Noir</td> 
-    </tr>
-
-    <tr>
-        <th> <img src="assets/img/11.png" alt="barbecue"></th>
-        <td>11</td>
-        <td>Barbecues</td>
-        <td>Clatronic</td>
-        <td>135.90€</td>
-        <td>Chrome</td>
-    </tr>
-
-    <tr> 
-        <th> <img src="assets/img/12.png" alt="barbecues"></th>
-        <td>12</td>
-        <td>Barbecues</td>
-        <td>Camping</td>
-        <td>88.00€</td>    
-        <td>Noir</td> 
-    </tr>
-
-    <tr> 
-        <th> <img src="assets/img/13.png" alt="brouettes"></th>
-        <td>13</td>
-        <td>Brouettes</td>
-        <td>Green</td>
-        <td>49.00€</td>    
-        <td>Noir</td> 
-    </tr>
-
- </table>
-
-</main>
-
- <footer>
-   
     <nav> <!-- Menu de Navigation -->
-      <ul class="nav" >
-          <li><a href="index.html">Mentions légales</a></li>
-          <li><a href="tableau.html">Horaires</a></li>
-          <li><a href="index.html">Plan du site</a></li>
-      </ul>
-     </nav>
+        <a href="index.html">Accueil</a>
+        <a href="tableau.html">Tableau</a>
+        <a href="contact.html">Contacts</a>
+    </nav>
 
-  </footer>
+    <div class="banniere">
+        <img class="promo" src="assets/img/promotion.jpg" alt="promotion">
+        <img class="body_gif" src="assets/img/GIF.gif" alt="logo_gif">
+    </div>
+
+    <main>
+
+        <table>
+
+            <tr>
+                <th class="entete_tab">Photo</th>
+                <th class="entete_tab">ID</th>
+                <th class="entete_tab">Categories</th>
+                <th class="entete_tab">Libellé</th>
+                <th class="entete_tab">Prix</th>
+                <th class="entete_tab">Couleur</th>
+
+            </tr>
+
+            <tr>
+                <th> <img src="assets/img/7.png" alt="barbecues"> </th>
+                <td>7</td>
+                <td>Barbecues</td>
+                <td>Aramis</td>
+                <td>110.00€</td>
+                <td>Brun</td>
+            </tr>
+
+            <tr>
+                <th> <img src="assets/img/8.png" alt="barbecues"></th>
+                <td>8</td>
+                <td>Barbecues</td>
+                <td>Athos</td>
+                <td>249.00€</td>
+                <td>Noir</td>
+            </tr>
+
+            <tr>
+                <th> <img src="assets/img/11.png" alt="brouettes"></th>
+                <td>11</td>
+                <td>Brouettes</td>
+                <td>Clatronic</td>
+                <td>135.90€</td>
+                <td>Chrome</td>
+            </tr>
+
+            <tr>
+                <th> <img src="assets/img/12.png" alt="barbecues"></th>
+                <td>12</td>
+                <td>Barbecues</td>
+                <td>Camping</td>
+                <td>88.00€</td>
+                <td>Noir</td>
+            </tr>
+
+            <tr>
+                <th> <img src="assets/img/13.png" alt="brouettes"></th>
+                <td>13</td>
+                <td>Brouettes</td>
+                <td>Green</td>
+                <td>49.00€</td>
+                <td>Noir</td>
+            </tr>
+
+        </table>
+
+    </main>
+
+    <footer>
+
+        <nav> <!-- Menu de Navigation -->
+            <a href="index.html">Mentions légales</a>
+            <a href="tableau.html">Horaires</a>
+            <a href="index.html">Plan du site</a>
+        </nav>
+
+    </footer>
 
 </body>
+
 </html>
