--- a/tableau.html
+++ b/tableau.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <!-- Début de la balise head -->
-
 <head>
     <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
     <meta charset="UTF-8">
     <!-- Permet d'indiquer comment le navigateur doit afficher la page sur différents appareils -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JARDITOU</title>
-
     <!-- CSS Files Links -->
     <link href="css/Jarditou.css" rel="stylesheet">
 </head>
@@ -16,11 +14,9 @@
 <body>
 
     <header>
-
         <img class="entete_g" src="assets/img/jarditou_logo.png" alt="logo_g">
         <h1 class="slogan">Tout le jardin</h1>
         <img class="entete_d" src="assets/img/jarditou_logo_dr.png" alt="logo_d">
-
     </header>
 
     <nav> <!-- Menu de Navigation -->
@@ -35,9 +31,7 @@
     </div>
 
     <main>
-
         <table>
-
             <tr>
                 <th class="entete_tab">Photo</th>
                 <th class="entete_tab">ID</th>
@@ -45,11 +39,10 @@
                 <th class="entete_tab">Libellé</th>
                 <th class="entete_tab">Prix</th>
                 <th class="entete_tab">Couleur</th>
-
             </tr>
 
             <tr>
-                <th> <img src="assets/img/7.png" alt="barbecues"> </th>
+                <td> <img src="assets/img/7.png" alt="barbecues"> </td>
                 <td>7</td>
                 <td>Barbecues</td>
                 <td>Aramis</td>
@@ -58,7 +51,7 @@
             </tr>
 
             <tr>
-                <th> <img src="assets/img/8.png" alt="barbecues"></th>
+                <td> <img src="assets/img/8.png" alt="barbecues"></td>
                 <td>8</td>
                 <td>Barbecues</td>
                 <td>Athos</td>
@@ -67,7 +60,7 @@
             </tr>
 
             <tr>
-                <th> <img src="assets/img/11.png" alt="brouettes"></th>
+                <td> <img src="assets/img/11.png" alt="brouettes"></td>
                 <td>11</td>
                 <td>Brouettes</td>
                 <td>Clatronic</td>
@@ -76,7 +69,7 @@
             </tr>
 
             <tr>
-                <th> <img src="assets/img/12.png" alt="barbecues"></th>
+                <td> <img src="assets/img/12.png" alt="barbecues"></td>
                 <td>12</td>
                 <td>Barbecues</td>
                 <td>Camping</td>
@@ -85,7 +78,7 @@
             </tr>
 
             <tr>
-                <th> <img src="assets/img/13.png" alt="brouettes"></th>
+                <td> <img src="assets/img/13.png" alt="brouettes"></td>
                 <td>13</td>
                 <td>Brouettes</td>
                 <td>Green</td>
