--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <!-- Début de la balise head -->
+
 <head>
-    <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
-    <meta charset="UTF-8">
-    <!-- Permet d'indiquer comment le navigateur doit afficher la page sur différents appareils -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JARDITOU</title>
-    <!-- CSS Files Links -->
-    <link href="css/Jarditou.css" rel="stylesheet">
+  <!-- Encodage UTF-8 conçu pour coder l'ensemble des caractères -->
+  <meta charset="UTF-8">
+  <!-- Permet d'indiquer comment le navigateur doit afficher la page sur différents appareils -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JARDITOU</title>
+  <!-- CSS Files Links -->
+  <link href="css/Jarditou.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,26 +17,28 @@
   <header>
 
     <img class="entete_g" src="assets/img/jarditou_logo.png" alt="logo_g">
-    <h1 class="slogan">Tout le jardin</h1>
+    <p class="titre">Tout le jardin</p>
     <img class="entete_d" src="assets/img/jarditou_logo_dr.png" alt="logo_d">
-
   </header>
 
   <nav> <!-- Menu de Navigation -->
-    <a href="index.html">Accueil</a>
-    <a href="tableau.html">Tableau</a>
-    <a href="contact.html">Contacts</a>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="tableau.html">Tableau</a></li>
+      <li><a href="contact.html">Contacts</a></li>
+    </ul>
   </nav>
 
-  <div class="banniere">
-    <img class="promo" src="assets/img/promotion.jpg" alt="promotion">
+  <div>
+    <a href="tableau.html"><img class="promo" src="assets/img/promotion.png" alt="promotion"></a>
     <img class="body_gif" src="assets/img/GIF.gif" alt="logo_gif">
   </div>
+
 
   <aside>
 
     <img class="outils" src="assets/img/outils.png" alt="outils">
-  
+
   </aside>
 
   <main>
@@ -44,12 +47,12 @@
 
     <section>
 
-      <h2 class="accueil">Accueil</h2>
+      <h1 class="accueil">ACCUEIL</h1>
       <hr>
 
       <article>
 
-        <h3>L'entreprise</h3><br>
+        <h2>L'entreprise</h2><br>
 
         <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du
           paysagisme.</p><br>
@@ -63,7 +66,7 @@
 
       <article>
 
-        <h3>Qualité</h3><br>
+        <h2>Qualité</h2><br>
 
         <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre projet.
         </p><br>
@@ -72,7 +75,7 @@
 
       <article>
 
-        <h3>Devis gratuit</h3><br>
+        <h2>Devis gratuit</h2><br>
 
         <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous
           souhaitez un devis ? Nous vous le réalisons gratuitement.</p><br>
@@ -84,12 +87,15 @@
   <footer>
 
     <nav> <!-- Menu de Navigation -->
-      <a href="index.html">Mentions légales</a>
-      <a href="tableau.html">Horaires</a>
-      <a href="index.html">Plan du site</a>
+      <ul>
+        <li><a href="index.html">Mentions légales</a></li>
+        <li><a href="tableau.html">Horaires</a></li>
+        <li><a href="index.html">Plan du site</a></li>
+      </ul>
     </nav>
 
   </footer>
+
 </body>
 
 </html>
